[gd_scene load_steps=2 format=3 uid="uid://ctcsydwnhb4ii"]

[ext_resource type="Script" path="res://event/decision/display/decision_display.gd" id="1_340pq"]

[node name="DecisionDisplay" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_340pq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"DecisionPanelContainer"

[node name="Description" type="Label" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_type_variation = &"DarkLabel"
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac ornare diam, vel dignissim dolor."
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Option1" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Option 1"

[node name="Option1Stats" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Option2" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Option 2"

[node name="Option2Stats" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer2/Option2" to="." method="_on_option_2_pressed"]
